--- a/admin/src/main/resources/templates/information/info.html
+++ b/admin/src/main/resources/templates/information/info.html
@@ -1,7 +1,7 @@
 <div class="contentpanel">
     <form class="form-inline">
         <div class="form-group">
-            <a class="btn btn-success btn-sm" ui-sref="infoCreate">添加</a>
+            <a class="btn btn-success btn-sm" ng-click="add()">添加</a>
         </div>
         <div class="form-group company-select">
             <select ng-change="search()" ng-model="state">
