--- a/web/src/main/resources/templates/user/provider/signup.html
+++ b/web/src/main/resources/templates/user/provider/signup.html
@@ -106,15 +106,13 @@
 			<div class="nav-box">
 				<a href="/productCategory/仪器">仪器</a>
 				<i>|</i>
-				<a href="/productCategory/仪器">试剂</a>
+				<a href="/productCategory/试剂">试剂</a>
 				<i>|</i>
-				<a href="/productCategory/仪器">耗材</a>
+				<a href="/productCategory/耗材">耗材</a>
 				<i>|</i>
-				<a href="/productCategory/仪器">服务</a>
+				<a href="/productCategory/服务">服务</a>
 				<i>|</i>
-				<a href="/productCategory/仪器">专题</a>
-				<i>|</i>
-				<a href="/informationCategorys/行业要闻">资讯</a>
+				<a href="/subjects">专题</a>
 			</div>
 		</div>
 		<div class="head-box clearfix">
