修改information页面jquery错误

--- a/web/src/main/resources/templates/information/information.html
+++ b/web/src/main/resources/templates/information/information.html
@@ -6,6 +6,7 @@
   <meta name="description" content=""/>
   <title>行业要闻详细</title>
   <link type="text/css" rel="stylesheet" th:href="@{/css/global.css}"/>
+  <script type="text/javascript" th:src="@{/js/jquery-1.11.2.min.js}"></script>
   <script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
    <meta name="_csrf" th:content="${_csrf.token}" />
 	<meta name="_csrf_header" th:content="${_csrf.headerName}" />
