--- a/admin/src/main/resources/templates/advertisement/createAdvertise.html
+++ b/admin/src/main/resources/templates/advertisement/createAdvertise.html
@@ -1,7 +1,7 @@
-<div class="modal-content">
-    <div class="modal-body">
+<div class="modal-content files_tab">
+    <div class="modal-body paddnone">
         <div class="contentpanel">
-            <form class="form-horizontal w300" ng-submit="submit()">
+            <form class="form-horizontal w400" ng-submit="submit()">
                 <div class="row">
                     <div class="form-group">
                         <label class="control-label col-sm-2">分类</label>
@@ -9,10 +9,16 @@
                             <select class="w300" ng-options="c.id as c.name for c in categories" ng-model="item.category" required="true"></select>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group lhg">
                         <label class="control-label col-sm-2">图片</label>
+                        <div class="col-sm-3">
+                            <img ng-src="{{item.cover}}" width="100" height="100" />
+                        </div>
                         <div class="col-sm-6">
-                            <input type="file" file-upload="upload" />
+                            <button id="uploadImg" class="btn btn-success btn-xs">
+                                <input type="file" file-upload="upload" />
+                                <a href="#">选择文件</a>
+                            </button>
                         </div>
                     </div>
                     <div class="form-group">
