--- a/admin/src/main/resources/templates/brand/brand.html
+++ b/admin/src/main/resources/templates/brand/brand.html
@@ -18,11 +18,13 @@
             <tr ng-repeat="item in items">
                 <td ng-click="view(item)">{{$index+1}}</td>
                 <td>{{item.title}}</td>
-                <td><img ng-src="{{item.cover}}" width="120" height="120" /></td>
-                <td>{{item.state}}</td>
+                <td>
+                	<img ng-src="{{item.cover}}" width="120" height="120" />
+                </td>
+                <td>{{item.state|activeFilter}}</td>
                 <td>
                     <button type="button" class="btn btn-primary btn-sm" ng-click="delete(item)">
-                        删除
+                    	{{item.state|reverseActiveFilter}}
                     </button>
                 </td>
             </tr>
