--- a/admin/src/main/resources/templates/product/detail.html
+++ b/admin/src/main/resources/templates/product/detail.html
@@ -7,13 +7,13 @@
                         <div class="form-group">
                             <label class="control-label col-sm-2"> 提交日期 </label>
                             <div class="col-sm-4">
-                                <input class="form-control" disabled="true" ng-value="item.createdTime" />
+                                <input class="form-control" disabled="true" ng-value="item.createdTime|date:'yyyy-MM-dd HH:mm:ss'" />
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label col-sm-2"> 状态 </label>
                             <div class="col-sm-4">
-                                <input class="form-control" disabled="true" ng-value="item.state" />
+                                <input class="form-control" disabled="true" ng-value="item.state|activeFilter" />
                             </div>
                         </div>
                         <div class="form-group">
@@ -53,7 +53,7 @@
                         <div class="form-group">
                             <label class="control-label col-sm-2"> 产地 </label>
                             <div class="col-sm-4">
-                                <input class="form-control" disabled="true" ng-value="item.original" />
+                                <input class="form-control" disabled="true" ng-value="item.original|originalFilter" />
                             </div>
                         </div>
                         <div class="form-group">
@@ -70,7 +70,8 @@
                         </div>
                         <div class="form-group">
                             <label class="control-label col-sm-2"> 商品详情 </label>
-                            <div class="col-sm-10" ng-bind-html="content"></div>
+                            <div class="col-sm-10" ng-bind-html="content">
+                            </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label col-sm-2">解决方案</label>
