--- a/admin/src/main/resources/templates/product/detail.html
+++ b/admin/src/main/resources/templates/product/detail.html
@@ -1,5 +1,4 @@
-<div class="modal-dialog" role="document">
-    <div class="modal-content">
+
         <div class="modal-body">
             <form class="form-horizontal">
                 <div class="form-group">
@@ -83,7 +82,7 @@
                      </ul>                            
                     </div>
                 </div>
-                <div class="panel-footer mauto">
+                <div class="panel-footer col-xs-offset-4">
                     <button class="btn btn-primary" type="button" ng-click="authenticate()">
                         上架
                     </button>
@@ -96,5 +95,3 @@
                 </div>
             </form>
         </div>
-    </div>
-</div>
