update upload button style

--- a/admin/src/main/resources/templates/advertisement/createAdvertise.html
+++ b/admin/src/main/resources/templates/advertisement/createAdvertise.html
@@ -1,4 +1,4 @@
-<div class="contentpanel">
+<div class="contentpanel files_tab">
     <form class="form-horizontal w400" ng-submit="submit()">
         <div class="row">
             <div class="form-group">
