--- a/admin/src/main/resources/templates/advertisement/advertisement.html
+++ b/admin/src/main/resources/templates/advertisement/advertisement.html
@@ -29,10 +29,9 @@
                 <td>{{item.categoryName}}</td>
                 <td>{{item.url}}</td>
                 <td>{{item.state|activeFilter}}</td>
-                <td>{{item.updatedTime}}</td>
+                <td>{{item.updatedTime|date:'yyyy-MM-dd HH:mm:ss'}}</td>
                 <td>
-                    <a class="btn btn-primary btn-sm">发布</a>
-                    <a class="btn btn-default btn-sm">修改</a>
+                    <a class="btn btn-primary btn-sm" ng-click="updateState(item)">{{item.state|reverseActiveFilter}}</a>
                 </td>
             </tr>
         </tbody>
