--- a/web/src/main/resources/templates/user/forgetPw.html
+++ b/web/src/main/resources/templates/user/forgetPw.html
@@ -24,21 +24,19 @@
 	<div class="resg-header">		
 		<div class="head-nav">
 			<div class="nav-box">
-				<a href="#">仪器</a>
+				<a href="/productCategory/仪器">仪器</a>
 				<i>|</i>
-				<a href="#">试剂</a>
+				<a href="/productCategory/试剂">试剂</a>
 				<i>|</i>
-				<a href="#">耗材</a>
+				<a href="/productCategory/耗材">耗材</a>
 				<i>|</i>
-				<a href="#">服务</a>
+				<a href="/productCategory/服务">服务</a>
 				<i>|</i>
-				<a href="#">专题</a>
-				<i>|</i>
-				<a href="#">资讯</a>
+				<a href="/subjects">专题</a>
 			</div>
 		</div>
 		<div class="head-box clearfix">
-			<a href="/" class="logo"><img src="img/topic1.jpg" alt="logo" width="165" height="80"/></a>
+			<a href="/" class="logo"><img th:src="@{/img/logo.png}" alt="logo" width="165" height="30"/></a>
 			<div class="head-menu-btn logo-menu">
 				<a class="self-btn"></a>
 				<a class="company-btn"></a>
