--- a/web/src/main/resources/templates/user/common/detail.html
+++ b/web/src/main/resources/templates/user/common/detail.html
@@ -77,7 +77,7 @@
 								</div>
 								<div class="form-group">
 									<div class="fl">
-										<label><i>*</i>部门</label> 
+										<label>部门</label> 
 										<input type="text" th:field="*{department}" />
 										<i class="error" th:if="${#fields.hasErrors('department')}" th:errors="*{department}"></i>
 									</div>
@@ -89,7 +89,7 @@
 								</div>
 								<div class="form-group">
 									<div class="fl">
-										<label><i>*</i>传真</label> <input type="text" th:field="*{fax}" />
+										<label>传真</label> <input type="text" th:field="*{fax}" />
 										<i class="error" th:if="${#fields.hasErrors('fax')}" th:errors="*{fax}"></i>
 									</div>
 									<div class="fl">
