scrollImg feature basic

--- a/admin/src/main/resources/templates/scroll/list.html
+++ b/admin/src/main/resources/templates/scroll/list.html
@@ -1,82 +1,23 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<meta charset="utf-8"/>
-		<title>jQuery File Upload Example</title>
-		<script src="/js/jquery-1.11.2.min.js"></script>
-		<script src="/js/vendor/jquery.ui.widget.js"></script>
-		<script src="/js/jquery.iframe-transport.js"></script>
-		<script src="/js/jquery.fileupload.js"></script>
-		<script>
-            $(function() {
-
-                var token = $("meta[name='_csrf']").attr("content");
-                var header = $("meta[name='_csrf_header']").attr("content");
-                var id = $("meta[name='id']").attr("content");
-
-                $(document).ajaxSend(function(e, xhr, options) {
-                    xhr.setRequestHeader(header, token);
-                });
-
-                $('input[type="file"]').bind('fileuploadsubmit', function(e, data) {
-                    var self = $(this);
-                    data.formData = {
-                        url : self.prev('input').val()
-                    };
-                });
-
-                $('input[type="file"]').fileupload({
-                    dataType : 'json',
-                    add : function(e, data) {
-                        data.context = $('<p/>').text('Uploading...').appendTo(document.body);
-                        data.submit();
-                    },
-                    done : function(e, data) {
-                        data.context.text('Upload finished.');
-                        var self = $(e.target);
-                        var img = self.next('img');
-                        img.attr('src', data.result.files[0].url);
-                    },
-                    progressall : function(e, data) {
-                        var progress = parseInt(data.loaded / data.total * 100, 10);
-                        $('#progress .bar').css('width', progress + '%').text(progress + '%');
-                    }
-                });
-
-                $('#refresh').click(function(e) {
-                    var self = $(this);
-                    var type = self.attr('data-type');
-                    $.ajax({
-                        method : 'put',
-                        url : '/admin/' + type + '/scrollImages',
-                        succcess : function() {
-
-                        }
-                    });
-                });
-            });
-		</script>
-		<style>
-			.bar {
-				height: 18px;
-				background-color: green;
-			}
-		</style>
-	</head>
-	<body>
-		<div th:each="i:${lists}">
-			<input type="text" id="url" th:value="${i.href}"/>
-			<input type="file" name="file" th:attr="data-url=@{/admin/scrollImages/index/__${i.id}__},data-sort=${i.sortNumber}"/>
-			<img th:src="${i.imageUrl}" style="height:100px;width:200px">
-			</img>
-			<div id="progress">
-				<div class="bar" style="width: 0%;"></div>
-			</div>
-		</div>
-		<div>
-			<button id="refresh" th:attr="data-type=${type}">
-				fresh
-			</button>
-		</div>
-	</body>
-</html>
+<div class="contentpanel">
+    <table class="table table-bordered mb30">
+        <thead>
+            <tr>
+                <th>序号</th>
+                <th>图片</th>
+                <th>链接</th>
+                <th>提交日期</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="item in items">
+                <td ng-click="view(item)">{{$index+1}}</td>
+                <td>{{item.imgUrl}}</td>
+                <td>{{item.href}}</td>
+                <td>{{item.updatedTime}}</td>
+            </tr>
+        </tbody>
+    </table>
+    <div class="pagenumQu">
+        <pagination total-items="total" items-per-page="15" max-size="7" ng-model="page" ng-change="search()"></pagination>
+    </div>
+</div>
