--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -30,6 +30,7 @@
     <script src="/js/module/productCategory.js"></script>
     <script src="/js/module/solution.js"></script>
     <script src="/js/module/category.js"></script>
+    <script src="/js/module/scrollImage.js"></script>
     <!--custom directive-->
     <script src="/js/module/uploadDirective.js"></script>
     <script src="/js/module/ckEditorDirective.js"></script>
@@ -40,7 +41,7 @@
     <header>
         <div class="headerwrapper">
             <div class="header-left">
-             	  上海申捷卫生科技管理系统
+                上海申捷卫生科技管理系统
             </div>
             <div class="header-right">
                 <a>admin</a>
@@ -77,6 +78,9 @@
                     </li>
                     <li>
                         <a ui-sref="subject">专题</a>
+                    </li>
+                    <li>
+                        <a ui-sref="scrollImg">滚动图片</a>
                     </li>
                     <li>
                         <a href="customer.html">客户行为统计</a>
