--- a/web/src/main/resources/templates/user/provider/modifyProduct.html
+++ b/web/src/main/resources/templates/user/provider/modifyProduct.html
@@ -43,7 +43,12 @@
             $('input[type="file"]').fileupload({
                 dataType : 'json',
                 add : function(e, data) {
-                    data.submit();
+                	  if(1048576 > data.files[0].size ){
+                      	 data.submit();
+                 	  }
+                 	  else{
+                 		  alert("文件过大,请上传1M以下的图片");
+                 	  }
                 },
                 done : function(e, data) {
                     $(this).parent().parent().find("img").attr("src",data.result.files[0].url);
