--- a/web/src/main/resources/templates/user/provider/signup.html
+++ b/web/src/main/resources/templates/user/provider/signup.html
@@ -87,7 +87,12 @@
               $('input[type="file"]').fileupload({
                   dataType : 'json',
                   add : function(e, data) {
-                      data.submit();
+                	  if(1048576 > data.files[0].size ){
+                     	 data.submit();
+                	  }
+                	  else{
+                		  alert("文件过大,请上传1M以下的图片");
+                	  }
                   },
                   done : function(e, data) {
                 	  $("#"+ajaxUrl).val(data.result.files[0].url);
@@ -132,7 +137,7 @@
 			<div class="hd resg-hd">
 				<span>注册信息</span>
 			</div>
-						<div class="form-group">
+			<div class="form-group">
 				<label><i>*</i>手机号</label>
 				<input type="text" th:field="*{phone}"/>
 				<button class="tel-code">获取验证码</button>
