--- a/admin/src/main/resources/templates/brand/brandDetail.html
+++ b/admin/src/main/resources/templates/brand/brandDetail.html
@@ -1,29 +1,29 @@
- <div class="modal-body files_tab">
-     <form class="form-horizontal w400">
-         <div class="row">
-             <div class="form-group">
-                 <label class="control-label col-sm-2">标题</label>
-                 <div class="col-sm-6">
-                     <input class="form-control" ng-model="item.title" />
-                 </div>
-             </div>
-             <div class="form-group lhg">
-                 <label class="control-label col-sm-2">图片</label>
-                 <div class="col-sm-3">
-                     <img ng-src="{{item.cover}}" width="100" height="100" />
-                 </div>
-                 <div class="col-sm-6">
-                     <button id="uploadImg" class="btn btn-success btn-xs">
-                         <input type="file" file-upload="upload" />
-                         <a href="#">选择文件</a>
-                     </button>
-                 </div>
-             </div>
-         </div>
-     </form>
- </div>
- <div class="modal-footer">
-     <button type="button" class="btn btn-primary" ng-click="submit()">
-         添加
-     </button>
- </div>
+<div class="modal-body files_tab">
+    <alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="1000" close="closeAlert($index)">{{alert.msg}}</alert>
+    <form class="form-horizontal w400" name="brandForm" ng-submit="submit()">
+        <div class="row">
+            <div class="form-group">
+                <label class="control-label col-sm-2">标题</label>
+                <div class="col-sm-6">
+                    <input class="form-control" name="title" ng-model="item.title" ng-required="true" />
+                    <span ng-show="brandForm.title.$error.required">请输入标题</span>
+                </div>
+            </div>
+            <div class="form-group lhg">
+                <label class="control-label col-sm-2">图片</label>
+                <div class="col-sm-3">
+                    <img ng-src="{{item.cover}}" width="100" height="100" />
+                </div>
+                <div class="col-sm-6">
+                    <button id="uploadImg" class="btn btn-success btn-xs">
+                        <input type="file" file-upload="upload" />
+                        <a href="#">选择文件</a>
+                    </button>
+                </div>
+            </div>
+            <div class="form-group lhg">
+                <input type="submit" class="btn btn-primary" value="保存"></input>
+            </div>
+        </div>
+    </form>
+</div>
