--- a/admin/src/main/resources/templates/product/detail.html
+++ b/admin/src/main/resources/templates/product/detail.html
@@ -1,4 +1,5 @@
         <div class="modal-body">
+    		<alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="1000" close="closeAlert($index)">{{alert.msg}}</alert>
             <form class="form-horizontal">
                 <div class="form-group">
                     <label class="control-label col-sm-2"> 提交日期 </label>
