--- a/admin/src/main/resources/templates/scroll/detail.html
+++ b/admin/src/main/resources/templates/scroll/detail.html
@@ -1,28 +1,32 @@
 <div class="modal-body files_tab">
-    <form class="form-horizontal w400" name="scrollForm" ng-submit="submit()">
-        <div class="row">
-            <div class="form-group">
-                <label class="control-label col-sm-2">href</label>
-                <div class="col-sm-6">
-                    <input class="form-control" name="href" ng-model="item.href" ng-required="true" />
-                    <span ng-show="scrollForm.href.$errors.required">need</span>
-                </div>
-            </div>
-            <div class="form-group lhg">
-                <label class="control-label col-sm-2">图片</label>
-                <div class="col-sm-3">
-                    <img ng-src="{{item.imageUrl}}" width="100" height="100" />
-                </div>
-                <div class="col-sm-6">
-                    <button id="uploadImg" class="btn btn-success btn-xs">
-                        <input type="file" file-upload="upload" />
-                        <a href="#">选择文件</a>
-                    </button>
-                </div>
-            </div>
-            <div class="form-group lhg">
-                <input type="submit" class="btn btn-primary" value="添加"></input>
-            </div>
-        </div>
-    </form>
+	<alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="1000" close="closeAlert($index)">
+		{{alert.msg}}
+	</alert>
+	<form class="form-horizontal w400" name="scrollForm" ng-submit="submit()">
+		<div class="row">
+			<div class="form-group">
+				<label class="control-label col-sm-2">href</label>
+				<div class="col-sm-6">
+					<input class="form-control" name="href" ng-model="item.href" ng-required="true" />
+					<span ng-show="scrollForm.href.$errors.required">need</span>
+				</div>
+			</div>
+			<div class="form-group lhg">
+				<label class="control-label col-sm-2">图片</label>
+				<div class="col-sm-3">
+					<img ng-src="{{item.imageUrl}}" width="100" height="100" />
+				</div>
+				<div class="col-sm-6">
+					<button id="uploadImg" class="btn btn-success btn-xs">
+						<input type="file" file-upload="upload" />
+						<a href="#">选择文件</a>
+					</button>
+				</div>
+			</div>
+			<div class="form-group lhg">
+				<input type="submit" class="btn btn-primary" value="添加">
+				</input>
+			</div>
+		</div>
+	</form>
 </div>
