--- a/admin/src/main/resources/templates/advertisement/createAdvertise.html
+++ b/admin/src/main/resources/templates/advertisement/createAdvertise.html
@@ -10,7 +10,7 @@
             <div class="form-group lhg">
                 <label class="control-label col-sm-2">图片</label>
                 <div class="col-sm-3">
-                    <img ng-src="{{item.cover}}" width="100" height="100" />
+                    <img ng-src="{{item.coverImg}}" width="100" height="100" />
                 </div>
                 <div class="col-sm-6">
                     <button id="uploadImg" class="btn btn-success btn-xs">
