--- a/web/src/main/resources/templates/user/provider/signup.html
+++ b/web/src/main/resources/templates/user/provider/signup.html
@@ -277,7 +277,7 @@
                 <label><i>*</i>组织结构代码证上传</label>
                 <img th:src="*{structureCodeUrl}" width="100" height="100" />
                 <span id="uploadImg" type="button">
-                    <input type='file' name='file' th:attr="data-url=@{structureCodeUrl}"/>
+                    <input type='file' name='file' th:attr="data-url=@{products/1?batch}"/>
                     <a href="#">选择文件</a>
                 </span>
                 <input type="hidden" th:field="*{structureCodeUrl}" />
