update modal style

--- a/admin/src/main/resources/static/css/style.default.css
+++ b/admin/src/main/resources/static/css/style.default.css
@@ -40,6 +40,9 @@ a{
 .mt20{
 	margin-top:20px;
 }
+.pb10{
+	padding-bottom:10px;
+}
 input.w160{
 	width:160px;
 	margin:auto;
@@ -620,7 +623,6 @@ section{
 
 footer{
 	position:relative;
-	z-index:2222;
 }
 .footerwrapper{
 	width:100%;
