--- a/admin/src/main/resources/templates/product/detail.html
+++ b/admin/src/main/resources/templates/product/detail.html
@@ -1,97 +1,103 @@
         <div class="modal-body">
     		<alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="1000" close="closeAlert($index)">{{alert.msg}}</alert>
             <form class="form-horizontal">
+            <div class="row">
+            	<div class="col-sm-6">
+            		<div class="form-group">
+	                    <label class="control-label col-sm-2"> 提交日期 </label>
+	                    <div class="col-sm-6">
+	                        <input class="form-control" disabled="true" ng-value="item.createdTime|date:'yyyy-MM-dd HH:mm:ss'" />
+	                    </div>
+	                </div>
+	                <div class="form-group">
+	                    <label class="control-label col-sm-2"> 一级分类 </label>
+	                    <div class="col-sm-6">
+	                        <input class="form-control" disabled="true" ng-value="item.firstCategoryName" />
+	                    </div>
+	                </div>
+                	<div class="form-group">
+	                    <label class="control-label col-sm-2"> 二级分类 </label>
+	                    <div class="col-sm-6">
+	                        <input class="form-control" disabled="true" ng-value="item.secondCategoryName" />
+	                    </div>
+	                </div>
+	                <div class="form-group">
+	                    <label class="control-label col-sm-2"> 价格 </label>
+	                    <div class="col-sm-6">
+	                        <input class="form-control" disabled="true" ng-value="item.price" />
+	                    </div>
+	                </div>
+	                <div class="form-group">
+	                    <label class="control-label col-sm-2"> 型号 </label>
+	                    <div class="col-sm-6">
+	                        <input class="form-control" disabled="true" ng-value="item.model" />
+	                    </div>
+	                </div>
+	                <div class="form-group">
+	                    <label class="control-label col-sm-2"> 标签 </label>
+	                    <div class="col-sm-8">
+	                        <input class="form-control" disabled="true" ng-value="item.label" />
+	                    </div>
+	                </div>
+            	</div>
+            	<div class="col-sm-6">
+            		<div class="form-group">
+	                    <label class="control-label col-sm-2"> 状态 </label>
+	                    <div class="col-sm-6">
+	                        <input class="form-control" disabled="true" ng-value="item.state|activeFilter" />
+	                    </div>
+	                </div>
+	                <div class="form-group">
+	                    <label class="control-label col-sm-2"> 产地 </label>
+	                    <div class="col-sm-6">
+	                        <input class="form-control" disabled="true" ng-value="item.original|originalFilter" />
+	                    </div>
+	                </div>
+	                <div class="form-group">
+	                    <label class="control-label col-sm-2"> 上架日期 </label>
+	                    <div class="col-sm-6">
+	                        <input class="form-control" disabled="true" ng-value="item.authenticatedTime" />
+	                    </div>
+	                </div>
+	                <div class="form-group">
+	                    <label class="control-label col-sm-2"> 名称 </label>
+	                    <div class="col-sm-6">
+	                        <input class="form-control" disabled="true" ng-value="item.name" />
+	                    </div>
+	                </div>
+	                <div class="form-group">
+	                    <label class="control-label col-sm-2"> 规格 </label>
+	                    <div class="col-sm-6">
+	                        <input class="form-control" disabled="true" ng-value="item.specifications" />
+	                    </div>
+	                </div>
+	                <div class="form-group">
+	                    <label class="control-label col-sm-2"> 商品详情 </label>
+	                    <div class="col-sm-10" ng-bind-html="content"></div>
+	                </div>
+            	</div>            	
                 <div class="form-group">
-                    <label class="control-label col-sm-2"> 提交日期 </label>
-                    <div class="col-sm-4">
-                        <input class="form-control" disabled="true" ng-value="item.createdTime|date:'yyyy-MM-dd HH:mm:ss'" />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-sm-2"> 状态 </label>
-                    <div class="col-sm-4">
-                        <input class="form-control" disabled="true" ng-value="item.state|activeFilter" />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-sm-2"> 一级分类 </label>
-                    <div class="col-sm-4">
-                        <input class="form-control" disabled="true" ng-value="item.firstCategoryName" />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-sm-2"> 上架日期 </label>
-                    <div class="col-sm-4">
-                        <input class="form-control" disabled="true" ng-value="item.authenticatedTime" />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-sm-2"> 二级分类 </label>
-                    <div class="col-sm-4">
-                        <input class="form-control" disabled="true" ng-value="item.secondCategoryName" />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-sm-2"> 名称 </label>
-                    <div class="col-sm-4">
-                        <input class="form-control" disabled="true" ng-value="item.name" />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-sm-2"> 价格 </label>
-                    <div class="col-sm-4">
-                        <input class="form-control" disabled="true" ng-value="item.price" />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-sm-2"> 型号 </label>
-                    <div class="col-sm-4">
-                        <input class="form-control" disabled="true" ng-value="item.model" />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-sm-2"> 产地 </label>
-                    <div class="col-sm-4">
-                        <input class="form-control" disabled="true" ng-value="item.original|originalFilter" />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-sm-2"> 规格 </label>
-                    <div class="col-sm-4">
-                        <input class="form-control" disabled="true" ng-value="item.specifications" />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-sm-2"> 标签 </label>
-                    <div class="col-sm-8">
-                        <input class="form-control" disabled="true" ng-value="item.label" />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-sm-2"> 商品详情 </label>
-                    <div class="col-sm-10" ng-bind-html="content"></div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-sm-2">解决方案</label>
+                  	<label class="control-label col-sm-1 ml10">解决方案</label>
                     <div class="col-sm-10 li-line">
-                     <ul>
-                         <li ng-repeat="s in solutions">
-                             <label>{{s.name}}</label>
-                             <input type="checkbox" ng-model="item.fake[s.id]" />
-                         </li>
-                     </ul>                            
+	                     <ul>
+	                         <li ng-repeat="s in solutions">
+	                             <label>{{s.name}}</label>
+	                             <input type="checkbox" ng-model="item.fake[s.id]" />
+	                         </li>
+	                     </ul>                            
                     </div>
-                </div>
-                <div class="panel-footer col-xs-offset-4">
-                    <button class="btn btn-primary" type="button" ng-click="authenticate()">
-                        上架
-                    </button>
-                    <button class="btn btn-defalut" type="button" ng-click="refuse()">
-                        拒绝
-                    </button>
-                    <button class="btn btn-defalut" type="button" ng-click="addSolution()">
-                        关联主题
-                    </button>
-                </div>
+             	</div>
+            </div>               
+           <div class="pb10 col-xs-offset-4">
+               <button class="btn btn-primary" type="button" ng-click="authenticate()">
+                   上架
+               </button>
+               <button class="btn btn-defalut" type="button" ng-click="refuse()">
+                   拒绝
+               </button>
+               <button class="btn btn-defalut" type="button" ng-click="addSolution()">
+                   关联主题
+               </button>
+           </div>
             </form>
         </div>
