--- a/admin/src/main/resources/templates/user/providerDetail.html
+++ b/admin/src/main/resources/templates/user/providerDetail.html
@@ -177,9 +177,9 @@
               	  通过审核
             </button>
         </div>
-        <div class="col-sm-6 files_tab ">
+        <div class="files_tab pos">
             <button id="uploadImg" class="btn btn-success btn-xs">
                   <input type="file" file-upload="batchProducts" data-id="{{item.id}}"/>
-                  <a href="#">选择文件</a>
+                  <a href="#">导入商品</a>
             </button>
         </div>
