--- a/web/src/main/resources/templates/product/product.html
+++ b/web/src/main/resources/templates/product/product.html
@@ -62,23 +62,12 @@
 	                 'number' : $("#num").val()
 	             },
 	             success : function(data) {
-	            	 var productId = $("#addCart").attr("data-id");
-	            	 var num = $("#num").val();
+	            	 //var productId = $("#addCart").attr("data-id");
+	            	// var num = $("#num").val();
 	                 if (data.data == "no authority") {
-	                 	alert("对不起您没有权限"");
-	                 } else if(data.data == "addone"){
-	                 	var cartNumber = $("#cartNumber6");
-	                 	var numberVal = cartNumber.html();
-	                 	cartNumber.html(parseInt(numberVal)+parseInt(num));
-	                 }else{
-	                 	var str = '<li id="cart'+productId+'"><div class="fl ct-img"><a href="/products/'+productId+'"><img width="50" height="50" src="'+data.image+'"/></a></div><div class="fl ct-name"><a href="/products/'+productId+'">'+data.name+'</a>'+
-							'</div><div class="fr ct-detail"><span class="ct-price"><b>'+data.price+'</b>×<i id="cartNumber'+productId+'">'+num+'</i></span><br/><a class="fr cartRemove" data-id="'+productId+'">删除</a></div></li>';
-	                 	$("#cartUl").append(str);
-	                 	var allNum = $("#allNum");
-	                 	allNum.html(parseInt(allNum.html())+1);
-	                 	var totalNum =$("#totalNum");
-	                 	totalNum.html(parseInt(totalNum.html())+1);
+	                 	alert("对不起您没有权限");
 	                 }
+	                 $('#includeHeader').load('/head');
 	             },
 	             error : function(data) {
 	                 alert(data);
