添加商品列表页ajaxLogin

--- a/web/src/main/resources/static/css/global.css
+++ b/web/src/main/resources/static/css/global.css
@@ -34,6 +34,13 @@ li{
 i{
 	font-style: normal;
 }
+.i-ml i.error{
+	display:block;
+	margin-left:163px;
+}
+.i-ml button.orange{
+	margin-top:10px;
+}
 a{
 	text-decoration: none;
 	color:#868fa7;
