--- a/web/src/main/resources/templates/user/forgetPw.html
+++ b/web/src/main/resources/templates/user/forgetPw.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="description" content=""/>
   <title>找回密码</title>
-  <link rel="stylesheet" type="text/css" href="css/global.css"/>
+  <link rel="stylesheet" type="text/css" th:href="@{/css/global.css}"/>
   <script src="js/jquery-min.js"></script>
   <meta name="_csrf" th:content="${_csrf.token}" />
   <meta name="_csrf_header" th:content="${_csrf.headerName}" />
@@ -48,7 +48,7 @@
 		<div class="hd resg-hd">
 			<span>找回密码</span>
 		</div>
-		<div class="w600 mauto find-password logo-wrap">
+		<div class="w600 mauto find-password i-ml">
 			<form th:object="${form}" th:method = "post">
 			<div class="form-group">
 				<div class="fl">
@@ -62,6 +62,7 @@
 				<div class="fl">
 				<label>验证码</label>
 				<input type="password" th:field="*{code}"/>
+				<i class="error"></i>
 				</div>
 			</div>
 			<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
