change td click to tr click

--- a/admin/src/main/resources/templates/product/list.html
+++ b/admin/src/main/resources/templates/product/list.html
@@ -36,8 +36,8 @@
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="item in items">
-                <td ng-click="view(item)">{{$index+1}}</td>
+            <tr ng-repeat="item in items" ng-click="view(item)">
+                <td>{{$index+1}}</td>
                 <td>{{item.firstCategoryName}}</td>
                 <td>{{item.secondCategoryName}}</td>
                 <td>{{item.name}}</td>
