--- a/admin/src/main/resources/templates/brand/brand.html
+++ b/admin/src/main/resources/templates/brand/brand.html
@@ -15,8 +15,8 @@
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="item in items">
-                <td ng-click="view(item)">{{$index+1}}</td>
+            <tr ng-repeat="item in items" ng-click="view(item)">
+                <td>{{$index+1}}</td>
                 <td>{{item.title}}</td>
                 <td>
                 	<img ng-src="{{item.cover}}" width="120" height="120" />
