--- a/admin/src/main/resources/templates/information/info.html
+++ b/admin/src/main/resources/templates/information/info.html
@@ -23,8 +23,8 @@
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="item in items">
-                <td ng-click="view(item)">{{$index+1}}</td>
+            <tr ng-repeat="item in items" ng-click="view(item)">
+                <td>{{$index+1}}</td>
                 <td>{{item.categoryName}}</td>
                 <td>{{item.title}}</td>
                 <td>{{item.state|activeFilter}}</td>
