--- a/admin/src/main/resources/templates/subject/subjects.html
+++ b/admin/src/main/resources/templates/subject/subjects.html
@@ -14,8 +14,8 @@
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="item in items">
-                <td ng-click="view(item)">{{$index+1}}</td>
+            <tr ng-repeat="item in items" ng-click="view(item)">
+                <td>{{$index+1}}</td>
                 <td>{{item.name}}</td>
                 <td>{{item.img}}</td>
             </tr>
