修改头部样式

--- a/web/src/main/resources/templates/product/product.html
+++ b/web/src/main/resources/templates/product/product.html
@@ -108,9 +108,7 @@
 </script>
 </head>
 <body>
-	<div id="includeHeader">
-		<div th:include="head/head :: head">Head</div>
-	</div>
+	<div id="includeHeader" th:include="head/head">Head</div>
 	<!-- header -->
 	<div id="loginForm"></div>
 	<div class="wrapper" th:object="${product}">
