--- a/web/src/main/resources/templates/product/products.html
+++ b/web/src/main/resources/templates/product/products.html
@@ -58,11 +58,9 @@
 	</head>
 	<body>
 
-		<div id="includeHeader">
-			<div th:include="head/head :: head">
+			<div id="includeHeader" th:include="head/head :: head">
 				Head
 			</div>
-		</div>
 		<!-- header -->
 		<div class="wrapper">
 			<div class="crumb">
