--- a/web/src/main/resources/templates/subject/subject.html
+++ b/web/src/main/resources/templates/subject/subject.html
@@ -68,9 +68,7 @@
 </script>
 </head>
 <body>
-	<div>
-		<div th:include="head/head :: head">Head</div>
-	</div>
+	<div id="includeHeader" th:include="head/head">Head</div>
 	<!-- header -->
 	<div class="wrapper" th:object="${subject}">
 		<div class="crumb news-crumb nobodr">
