--- a/web/src/main/resources/templates/subject/subjects.html
+++ b/web/src/main/resources/templates/subject/subjects.html
@@ -26,9 +26,7 @@
             </script>
 </head>
 <body>
-	<div>
-		<div th:include="head/head :: head">Head</div>
-	</div>
+	<div th:include="head/head">Head</div>
 	<!-- header -->
 	<div class="wrapper">		
 		<div class="global-box topic-box">
