--- a/web/src/main/resources/templates/user/common/collection.html
+++ b/web/src/main/resources/templates/user/common/collection.html
@@ -43,9 +43,7 @@
 		</script>
 	</head>
 	<body>
-	<div class="head">
-		<div th:include="head/head"></div>
-	</div>
+		<div class="header" th:include="head/head">Head</div>
 		<!-- header -->
 		<div class="wrapper">
 			<div class="self-wrap">
