--- a/web/src/main/resources/templates/user/provider/release.html
+++ b/web/src/main/resources/templates/user/provider/release.html
@@ -116,9 +116,7 @@
 </script>
 </head>
 <body>
-	<div class="header">
-		<div th:include="head/head :: head">Head</div>
-	</div>
+	<div class="header" th:include="head/head">Head</div>
 	<!-- header -->
 	<div class="wrapper">
 		<div class="self-wrap">
