--- a/web/src/main/resources/templates/productcategory/productCategorys.html
+++ b/web/src/main/resources/templates/productcategory/productCategorys.html
@@ -22,18 +22,16 @@
 </script>
 </head>
 <body>
-	<div>
-		<div th:include="head/head :: head">Head</div>
-	</div>
+	<div th:include="head/head">Head</div>
 	<!-- header -->
 	<div class="wrapper">
 		<div class="products">
 			<div class="sort-wrap clearfix">
 				<div class="sort-box fl">	
 					<div class="sort-list" th:each="category:${categories}">
-						<div class="sort-hd gray-hd"><a th:text="${category.name}" th:href="@{'/productCategory/'+${pc.name}+'/'+${category.name}}"></a></div>
+						<div class="sort-hd gray-hd"><a th:text="${category.name}"  th:href="@{'/products/_search?secondCategory='+${category.id}}"></a></div>
 						<div class="sort-detail bodr">
-							<i th:each="child:${category.categories}"><a th:text="${child.name}" th:href="@{'/productCategory/'+${pc.name}+'/'+${category.name}+'/'+${child.name}}"></a><i>|</i></i>
+							<i th:each="child:${category.categories}"><a th:text="${child.name}" th:href="@{'/products/_search?thirdCategory='+${child.id}}"></a><i>|</i></i>
 						</div>
 					</div>
 					<div class="sort-list">					
