--- a/web/src/main/resources/templates/user/provider/count.html
+++ b/web/src/main/resources/templates/user/provider/count.html
@@ -10,9 +10,7 @@
   <script th:src="@{/js/script.js}"></script>
 </head>
 <body>
-	<div class="header">
-		<div th:include="head/head :: head">Head</div>
-	</div>
+	<div class="header" th:include="head/head">Head</div>
 	<!-- header -->
 	<div class="wrapper">
 		<div class="self-wrap">
